--- a/projects/client/src/Pages/User/FilteredProperty/FilteredProperty.css
+++ b/projects/client/src/Pages/User/FilteredProperty/FilteredProperty.css
@@ -1,17 +1,16 @@
-.container-fp{
+.container-fp {
   padding: 0 7%;
 }
 
-.property-fp{
-  display: flex;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+.property-fp {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   grid-row-gap: 30px;
   margin-bottom: 30px;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 10px;
+  justify-content: space-between;
   margin-top: 10px;
 }
-.property-fp div{
+
+.property-fp div {
   position: relative;
 }
